--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,10 @@ dependencies {
     //Nuevo
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
+
 }
 //Nuevo
 apply plugin: 'com.android.application'
