--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,5 @@ dependencies {
 
 }
 //Nuevo
-apply plugin: 'com.android.application'
+//apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
